# pyvibrate

./: .gitignore  AGENTS.md  AGENTS_realistic_transformer_plan.md  AGENT_MEMORY.md  README.md  USAGE_frequency_domain.md  USAGE_time_domain.md  pyproject.toml  subcircuit_testing_plan.md  testing_plan.md  typescript
.github/workflows/: test.yml
examples/: PLAN.md  README.md  falstad_compatible_circuits.md
examples/falstad/basic/: voltage_divider.py
examples/falstad/filters/: bandpass_filter.py  lowpass_rc.py
examples/falstad/filters/bandpass_rlc/haiku/: bandpass_rlc.py  (+1 more)
examples/falstad/opamp/: inverting.py  inverting_study.md  inverting_study.py
examples/falstad/plan/: analyze_compatibility.py  claude_prompt_implement_circuit.md  compatibility_checklist.md  execution_notes.md  implement_batch.sh  implement_circuit.sh
examples/falstad/rlc/: inductor_kick.py  lrc_resonance.py
notebooks/: demo_delay_line.ipynb  demo_freqdomain_fitting.ipynb  demo_freqdomain_sensitivity.ipynb  demo_rlc_01.ipynb  demo_vcr_01.ipynb  play01.ipynb
pyvibrate/: __init__.py
pyvibrate/frequencydomain/: __init__.py  components.py  network.py  solver.py  subcircuits.py
pyvibrate/timedomain/: __init__.py  components.py  network.py  simulator.py  subcircuits.py
tests/: test_component_values.py  test_current_probe.py  test_delay_line.py  test_delay_line_fft.py  test_differentiability.py  test_freqdomain_c.py  test_freqdomain_l.py  test_freqdomain_phaseshift.py  test_freqdomain_r.py  test_freqdomain_subcircuits.py  test_freqdomain_tdvcvs.py  test_freqdomain_tline.py  test_freqdomain_vcvs.py  test_hbridge.py  test_jax_optimization.py  test_rc_circuit.py  test_rl_circuit.py  test_rlc_circuit.py  test_switch.py  test_timedomain_subcircuits.py  test_vcr.py  test_vcvs.py  test_voltage_switch.py
(+4 files in other folders)
