[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvibrate"
version = "0.1.0"
description = "JAX-compatible circuit simulator, time and frequency domain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Grey"}
]
keywords = [
    "circuit-simulator",
    "spice",
    "jax",
    "autodiff",
    "piezo",
    "transient-analysis",
    "frequency-domain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (Spice)",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jerzydziewierz/pyvibrate/"
Repository = "https://github.com/jerzydziewierz/pyvibrate/"
Documentation = "https://github.com/jerzydziewierz/pyvibrate/"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyvibrate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
